--- a/coc-settings.json
+++ b/coc-settings.json
@@ -5,6 +5,9 @@
 			"filetypes": ["c", "cc", "cpp", "c++", "objc", "objcpp"],
 			"rootPatterns": [".ccls", "compile_commands.json", ".git/", ".hg/"],
 			"initializationOptions": {
+				"completion": {
+					"detailedLabel": true
+				},
 				"cache": {
 					"directory": "/tmp/ccls"
 				}
